Prevent accent colors from flickering in dark mode

--- a/_assets/css/components/_header.scss
+++ b/_assets/css/components/_header.scss
@@ -70,7 +70,7 @@ $header-border-width: 5px;
         background: var(--accent-color);
         width: 100%;
         height: $header-border-width;
-        transition: all $transition-duration ease;
+        transition: transform $transition-duration ease;
         z-index: -1;
       }
 
